--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{    
-    ViewData["Title"] = "Eric's home page";
+    ViewData["Title"] = "Eric's new home page";
 }
 
 <div class="jumbotron">
