--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
 @model IndexModel
 @{    
-    ViewData["Title"] = "Eric's new home page";
+    ViewData["Title"] = "Welcome to my home page";
 }
 
 <div class="jumbotron">
     <h1>.NET 💜 Azure</h1>
     <p class="lead">Example .NET app to Azure App Service.</p>
+    <p>Eric Rules</p>
 </div>
 
 <!-- <div class="text-center">
